# hybitor

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  meson.build
.cache/clangd/index/: common.h.19B60A79F5ECCB19.idx  controller.c.7961D0EEECC91F7D.idx  cpu-exec.c.B00C1848DEF79180.idx  cpu.h.A5E4E34061F376C6.idx  decode.h.BCD7506DFC4D4373.idx  expr.c.B21C75CFA6818000.idx  hdb.c.BEE39C9B6D3D985E.idx  hdb.h.2364C62C750A75AA.idx  hostcall.c.135C7313D9C8BF7A.idx  hybitor.c.6E43B0DD07FB281A.idx  ifetch.h.6716550391AE8F07.idx  init.c.7494E7614F7B764C.idx  inst.c.146B7FE333DDA8AD.idx  isa-def.h.DE7C8F17C466416D.idx  isa.h.821AB0DA0CD34232.idx  loader.c.F7CAA334AA75AF49.idx  loader.h.773B27FFF9E3E5ED.idx  log.c.B57FF7980E77FF1E.idx  logo.c.7C32FA54542BF59E.idx  mmu.c.232DC36B0A77674D.idx  mmu.h.A34D103618C8B84F.idx  monitor.c.E02B95D64EA07BD0.idx  reg.c.BFE07954EA1751EF.idx  reg.h.305BD6C71ED13A0D.idx  server.c.C92152597F9141CD.idx  state.c.197283F56E41ACE9.idx  timer.c.51542A8775264B3F.idx  utils.h.BC1D733AC1576B17.idx  watchpoint.c.8FBD39B94C1AC671.idx
docs/: CMakeLists.txt  eBPF 简介.md  hello.arm64
docs/capstone2llvmir/: capstone2llvmir.h  exceptions.cpp
docs/capstone2llvmir/arm/: arm.cpp  arm_init.cpp
docs/capstone2llvmir/arm64/: arm64_impl.h  arm64_init.cpp
docs/capstone2llvmir/mips/: mips.cpp  mips.h  mips_impl.h
docs/capstone2llvmir/powerpc/: powerpc.h  powerpc_init.cpp
docs/capstone2llvmir/x86/: x86.cpp  x86.h  x86_init.cpp
docs/common/: address.cpp  architecture.cpp  basic_block.cpp  calling_convention.cpp  class.h  file_format.cpp  file_format.h  file_type.cpp  file_type.h  object.cpp  pattern.cpp  pattern.h  range.h  storage.cpp  tool_info.cpp  tool_info.h  type.cpp  vtable.cpp
docs/riscv32/: reg.c
docs/riscv32/include/: isa-def.h  reg.h
include/: binaryfile.hpp  clienv.hpp  common.h  isa.h  utils.h
include/LIEF/: version.h
include/binaryfile/: assembler.hpp  disassembler.hpp  lifter.hpp  loader.hpp  writer.hpp
include/capstone2llvmir/: capstone2llvmir.cpp  capstone2llvmir_impl.cpp  capstone2llvmir_impl.h  capstone_utils.h  exceptions.h  llvmir_utils.cpp  llvmir_utils.h  meson.build
include/capstone2llvmir/arm/: arm.h  arm_defs.h  arm_impl.h  arm_init.cpp
include/capstone2llvmir/arm64/: arm64.cpp  arm64.h  arm64_defs.h  arm64_impl.h
include/capstone2llvmir/mips/: mips_defs.h  mips_init.cpp
include/capstone2llvmir/powerpc/: powerpc.cpp  powerpc_defs.h  powerpc_impl.h
include/capstone2llvmir/x86/: x86_defs.h  x86_impl.h
include/client/: client.h
include/clienv/: SOP.hpp  STP.hpp
include/cliparser/: CLI11.hpp  cliparser.hpp  disassemble.hpp  lift.hpp  opt.hpp  repl.hpp  translate.hpp
include/common/: address.h  architecture.h  basic_block.h  calling_convention.h  class.cpp  function.cpp  function.h  language.cpp  language.h  object.h  storage.h  type.h  vtable.h
include/core/: decord.hpp  disassembler.hpp  interp_util.hpp  interpreter.hpp  lifter.hpp  loader.hpp  repler.hpp  writer.hpp
include/core/CodeStruct/: BasicStruct.hpp  TranslatedStruct.hpp
include/core/Lift/: translator.hpp
include/cpu/: cpu.h  cpu.hpp  decode.h  ifetch.h  state.hpp
include/emulator/: bus.hpp  cpu.hpp  csr.hpp  decoder.hpp  interp_util.hpp  interpreter.hpp  isa.h  machine.hpp  mem.hpp  reg.hpp  syscall.hpp  trap.hpp
include/emulator/cpu/: cpu.h  decode.h  ifetch.h
include/emulator/softmmu/: softmmu.h
include/insn/: insn.hpp  syscall.hpp
include/libelf/: sys_elf.h
include/llvm/Config/: llvm-config.h
include/llvm/IR/: IntrinsicImpl.inc  IntrinsicsWebAssembly.td
include/llvm/Support/: ARMTargetParser.def  X86TargetParser.def
include/memory/: memory.hpp  mmu.h  reg.hpp
include/server/: server.h
include/tcg/: tcg-op.h
include/tools/: debug.hpp  types.hpp
include/utils/: alignment.cpp  alignment.h  array.h  binary_path.cpp  binary_path.h  byte_value_storage.cpp  byte_value_storage.h  container.h  conversion.cpp  conversion.h  crc32.cpp  crc32.h  debug.h  dynamic_buffer.cpp  dynamic_buffer.h  equality.h  file_io.cpp  file_io.h  filesystem.h  filter_iterator.h  math.cpp  math.h  memory.cpp  memory.h  non_copyable.h  ord_lookup.cpp  ord_lookup.h  os.h  scope_exit.h  string.cpp  string.h  system.cpp  system.h  time.h  version.cpp  version.h
include/utils/io/: log.h  logger.cpp  logger.h
src/: hybitor.c  main.cpp
src/client/: client.c
src/client/loader/: loader.c
src/client/loader/include/: loader.h
src/client/monitor/: monitor.c
src/client/monitor/hdb/: expr.c  hdb.c  watchpoint.c
src/controller/: controller.c
src/controller/loader/: loader.c  loader.h
src/controller/loader/include/: loader.h
src/cpu/: cpu-exec.c
src/emulator/cpu/: cpu-exec.c
src/emulator/isa/aarch64/: reg.c
src/emulator/isa/aarch64/include/: isa-def.h  reg.h
src/emulator/isa/riscv32/include/: reg.h
src/emulator/isa/riscv64/: init.c  inst.c  logo.c  reg.c
src/emulator/softmmu/: softmmu.c
src/isa/aarch64/: reg.c
src/isa/riscv32/: reg.c
src/isa/riscv32/include/: isa-def.h
src/isa/riscv64/: init.c  inst.c  logo.c  reg.c
src/isa/riscv64/include/: isa-def.h  reg.h
src/memory/: mmu.c
src/monitor/: monitor.c
src/monitor/hdb/: expr.c  hdb.c  hdb.h  watchpoint.c
src/monitor/hdb/include/: hdb.h
src/server/: server.c
src/server/decoder/: decode.cc
src/server/interpreter/: hostcall.c
src/server/lifter/: cfg.cc
src/utils/: log.c  state.c  timer.c
subitem/hyarmdec/: README.md  arm64dec-test.c  decode.c  example.cpp  hyarmdec.h  hyarminsts.h  meson.build
subitem/hyload/: .gitignore  README.md  elf-def.h  elfdef.h  elfload-test.c  example.cpp  hyload.h  load.c  meson.build
subitem/hyload/test/: hello.rv64
test/: ha64.asm  hello.aarch64  hello.c  hello.riscv64  hello.x86_64  hr64.asm  hr64.ll
